--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,8 @@
     "nixEnvSelector.nixFile": "${workspaceRoot}/shell.nix",
     "editor.defaultFormatter": "jnoortheen.nix-ide",
     "editor.formatOnSave": true,
-    "editor.formatOnType": true
+    "editor.formatOnType": true,
+    "files.watcherExclude": {
+        "**/.tmp/*/**": true
+    }
 }
